# neat

./: .editorconfig  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md  fitness_per_generation.csv  fitness_per_generation_DiffValB_08.csv  fitness_per_generation_DiifValA_08.csv  fitness_per_generation_SameVal_00_highmut.csv  neat.code-workspace
include/neat/: Brain.hpp  Config.hpp  Genome.hpp  InnovationHistory.hpp  Neuron.hpp  Population.hpp  Random.hpp  Simulation.hpp  Species.hpp  Synapse.hpp  flag_types.hpp  innovation.hpp  log.hpp  neat.hpp  types.hpp
neat/: CMakeLists.txt  configure.hpp.in
neat/include/neat/: Brain.hpp  Config.hpp  Genome.hpp  InnovationHistory.hpp  Neuron.hpp  Population.hpp  Random.hpp  Simulation.hpp  SimulationFactory.hpp  SimulationInfo.hpp  Species.hpp  Synapse.hpp  UserData.hpp  types.hpp
neat/src/: Brain.cpp  Genome.cpp  InnovationHistory.cpp
neatdraw/: CMakeLists.txt
neatdraw/neatdrawgl/: CMakeLists.txt
neatdraw/neatdrawgl/include/neat/: neatdrawgl.hpp
neatdraw/neatdrawgl/src/: neatdrawgl.cpp
sample/: CMakeLists.txt  Roboto.bff  flappy.cpp  main.cpp  main.cpp2  xor.cpp2
sample/flappy/: Bird.hpp  Config.hpp  Flappy.hpp  Pipe.hpp  Sim.hpp  UserData.hpp  Vertex.hpp  flappy.cpp  logic.hpp  main.cpp
sample/roids/: ezobj.cpp  ezobj.hpp  main.cpp  shaders.hpp
sample/snake/: main.cpp  shaders.hpp
sample/xor/: xor.cpp2
src/: Genome.cpp  InnovationHistory.cpp  Simulation.cpp  neat.cpp
tests/: CMakeLists.txt  tests.cpp
